Updating index page

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,5 +8,14 @@
 <body>
     <h1>Welcome to HTML and CSS Course</h1>
     <p>This course helps you understand the fundamentals of HTML and CSS.</p>
+    <h2>Course Topics</h2>
+    <ul>
+        <li>HTML Basics</li>
+        <li>CSS Fundamentals</li>
+        <li>Responsive Design</li>
+        <li>Web Accessibility</li>      
+    </ul>
+    <h2>Resources</h2>
+    <p>For more information, visit the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">MDN Web Docs</a>.</p>
 </body>
 </html>
